A lot and I mean a lot of class changes

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 3.4
+ * @version 3.5
  */
 
  .app-2CXKsg {
@@ -122,7 +122,7 @@
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -21px 9px -16px rgba(231, 254, 255, 0.63);
 }
 
-.wrapper-3kah-n > .svg-2zuE5p {
+.wrapper-3kah-n > .svg-2ifYOU {
     display: none;
 }
 
@@ -224,10 +224,10 @@
 }
 
 
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: limegreen;
 }
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(0deg,transparent,transparent 1px,limegreen 0,limegreen 2px,transparent 0);
 }
 
@@ -262,7 +262,7 @@
     color: white !important;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -31px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 45px 45px, rgba(255, 255, 255, .85) 10%, rgba(19, 9, 65, 0.69) 100%, rgba(19, 9, 65, 0.79) 100%);
     width: auto;
@@ -272,7 +272,7 @@
     background-color: transparent;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white !important;
     border-color: transparent;
 }
@@ -293,25 +293,25 @@
     background-color: transparent;
 }
 
-.colorDanger-3n-KnP.focused-3qFvc8 {
+.colorDanger-3n-KnP.focused-3LIdPu {
     background-color: transparent;
     box-shadow: inset 1px 9px 1px 3px rgba(189, 30, 36, 0.33), inset -12px -12px 9px -6px rgba(189, 30, 36, 0.63) !important;
     background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255) 10%, rgba(189, 30, 36, 0.29) 100%, rgba(189, 30, 36, 0.29) 100%) !important;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: transparent;
     box-shadow: inset 1px 9px 1px 3px rgba(240, 163, 10, 0.33), inset -12px -12px 9px -6px rgba(240, 163, 10, 0.63);
     background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255) 10%, rgba(240, 163, 10, 0.29) 100%, rgba(240, 163, 10, 0.29) 100%);
 }
 
-.colorDanger-3n-KnP:active:not(.hideInteraction-2jPGL_) {
+.colorDanger-3n-KnP:active:not(.hideInteraction-1vQrZJ) {
     background-color: transparent;
     box-shadow: inset 1px 9px 1px 3px rgba(189, 30, 36, 0.33), inset -12px -12px 9px -6px rgba(189, 30, 36, 0.73) !important;
     background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255) 10%, rgba(189, 30, 36, 0.49) 100%, rgba(189, 30, 36, 0.49) 100%) !important;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: transparent;
     box-shadow: inset 1px 9px 1px 3px rgba(240, 163, 10, 0.33), inset -12px -12px 9px -6px rgba(240, 163, 10, 0.73);
     background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255) 10%, rgba(240, 163, 10, 0.49) 100%, rgba(240, 163, 10, 0.49) 100%);
@@ -321,11 +321,11 @@
     background-color: rgba(0,0,0,.3) !important;
 }
 
-.theme-dark .separator-2lLxgC {
+.theme-dark .separator-3C440w {
     box-shadow: none;
 }
 
-.root-g14mjS {
+.root-1CAIjD {
     border-radius: 50pc;
 }
 
@@ -334,28 +334,28 @@
     padding-left: 82px;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -31px 9px -16px rgba(231, 254, 255, 0.53) !important;
     background-image: radial-gradient(circle closest-side at 135px 135px, rgba(255, 255, 255, .45) 10%, rgba(0, 0, 0, 0.65) 100%, rgba(0, 0, 0, 0.59) 100%);
 }
 
-.root-g14mjS .scroller-3nFW5p {
+.root-1CAIjD .scroller-3nFW5p {
     padding-left: 42px;
     padding-right: 42px !important;
     overflow: visible scroll !important
 }
 
-.theme-dark .footerSeparator-VzAYwb {
+.theme-dark .footerSeparator-3U8YsT {
     box-shadow: none;
 }
 
-.root-g14mjS .footer-31IekZ  {
+.root-1CAIjD .footer-1KGV6y  {
     margin-left: 33px;
     margin-right: 33px;
 }
 
-.root-g14mjS .searchBar-20o6Cf {
+.root-1CAIjD .searchBar-20o6Cf {
     margin-left: 7pc;
     margin-right: 7pc;
 }
@@ -468,7 +468,7 @@
     color: gold;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     background-color: transparent;
     margin-right: 52px;
 }
@@ -478,7 +478,7 @@
     position: relative;
 } 
 
-.root-g14mjS .size16-rrJ6ag {
+.root-1CAIjD .size16-rrJ6ag {
     left: 23px;
     position: relative;
 }
@@ -546,12 +546,12 @@
     min-height: 500px;
 }
 
-.root-g14mjS.small-23Atuv {
+.root-1CAIjD.small-23Atuv {
     width: 490px;
     padding: 74px 120px;
 }
 
-.root-g14mjS.medium-1ywRMv {
+.root-1CAIjD.medium-1ywRMv {
     width: 400px;
     padding: 24px 144px;
 }
@@ -581,11 +581,11 @@
    background-image: radial-gradient(circle closest-side at 150px 150px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.76) 100%, rgba(0, 0, 0, 0.76) 100%);
 }
 
-.layer-2aCOJ3[style*="position: absolute; top: 65.9818px; right: 296px;"] .messagesPopoutWrap-3zryHW {
+.layer-2BGhQ8[style*="position: absolute; top: 65.9818px; right: 296px;"] .messagesPopoutWrap-3zryHW {
     left: 302px;
 }
 
-.layer-2aCOJ3[style*="position: absolute; top: 65.9818px; right: 56px;"] .recentMentionsPopout-2bI1ZN:not(.container-2ebMPP) {
+.layer-2BGhQ8[style*="position: absolute; top: 65.9818px; right: 56px;"] .recentMentionsPopout-2bI1ZN:not(.container-2ebMPP) {
     left: 52px;
     max-width: 800px;
     padding: 24px 204px;
@@ -746,7 +746,7 @@
     border-radius: 50px;
 }
 
-.topPill-3DJJNV .item-3XjbnG {
+.topPill-3DJJNV .item-2GWPIy {
     border-radius: 50px;
 }
 
@@ -1034,7 +1034,7 @@
     color: white;
 }
 
-.brand-3g5E0C.item-3XjbnG, .themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy, .themed-qqoYp3.item-2GWPIy {
     color: lightskyblue;
 }
 
@@ -1500,22 +1500,22 @@
     background-color: transparent;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 21px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: rgba(255, 255, 255, .39);
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, .auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, .auto-2TJ1RH::-webkit-scrollbar-track {
     border-radius: 50px;
 }
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
-.thin-31rlnD::-webkit-scrollbar, .thin-31rlnD::-webkit-scrollbar-thumb, .thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar, .thin-RnSY0a::-webkit-scrollbar-thumb, .thin-RnSY0a::-webkit-scrollbar-track {
     display: none;
 }
 
@@ -1680,11 +1680,11 @@
 }
 
 
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .item-2GWPIy {
     border-radius: 50px;
 }
 
-.side-2ur1Qk .item-3XjbnG[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
+.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
     box-shadow: inset 1px 2px 1px 3px rgba(238, 17, 17, 0.33), inset -12px -8px 14px -6px rgba(238, 17, 17, 0.63) !important;
     background-image: radial-gradient(circle closest-side at 9px 9px, rgba(255, 255, 255) 10%, rgba(238, 17, 17, 0.18) 100%, rgba(238, 17, 17, 0.18) 100%) !important;
     border: none !important;
@@ -1701,24 +1701,24 @@
     color: gold;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 15px;
     text-transform: capitalize;
     color: white;
 }
 
-.selected-g-kMVV.item-3XjbnG, .selected-g-kMVV.item-3XjbnG:hover,
-.brand-3g5E0C.item-3XjbnG:hover, .themed-2-lozF.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, .selected-1sf9UK.item-2GWPIy:hover,
+.brand-2EKq3J.item-2GWPIy:hover, .themed-qqoYp3.item-2GWPIy:hover {
     color: white;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53) !important;
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%) !important;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 15px 10px, rgba(255, 255, 255, .65) 10%, rgba(255, 204, 92, 0.49) 100%, rgba(255, 204, 92, 0.49) 100%);
@@ -1772,21 +1772,21 @@
     background-image: radial-gradient(circle closest-side at 25px 25px, rgba(255, 255, 255, .65) 10%, rgba(108, 92, 255, 0.29) 100%, rgba(108, 92, 255, 0.29) 100%);
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: transparent;
     background-image: radial-gradient(circle closest-side at 18px 9px, rgba(255, 255, 255, .85) 10%, rgba(20, 0, 131, 0.79) 100%, rgba(20, 0, 131, 0.79) 100%);
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     color: white;
 }
 
-.tooltip-14MtrL {
+.tooltip-33Jwqe {
     border-radius: 30px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: transparent;
 }
 
@@ -1808,7 +1808,7 @@
     background-color: transparent;
 }
 
-.root-g14mjS .perks-2IIbWQ  {
+.root-1CAIjD .perks-2IIbWQ  {
     margin-left: 62px;
     margin-right: 62px;
     margin-bottom: 18px;
@@ -1905,12 +1905,12 @@
     color: white;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: #00aba9;
 }
 
 
-.colorDefault-CDqZdO .checkbox-hADx5o, .colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, .colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #00aba9;
 }
 
@@ -1929,15 +1929,15 @@
     opacity: .2 !important;
 }
 
-.root-g14mjS .title-3hptVQ {
+.root-1CAIjD .title-3hptVQ {
     position: relative;
     left: -12px;
 }
-.root-g14mjS .size12-oc4dx4 {
+.root-1CAIjD .size12-oc4dx4 {
     position: relative;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: blue;
     border-radius: 50px;
 }
@@ -1999,11 +1999,11 @@
     height: 120px !important;
 }
 
-.cardPrimary-3qRT__, .cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: transparent;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background-image: radial-gradient(circle closest-side at 15px 15px, rgba(255, 255, 255, .85) 10%, rgba(0, 0, 0, 0.49) 100%, rgba(0, 0, 0, 0.49) 100%);
     background-color: transparent;
     border-radius: 50px;
@@ -2028,7 +2028,7 @@
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -19px 9px -16px rgba(231, 254, 255, 0.33);
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: transparent;
 }
 
@@ -2148,7 +2148,7 @@
     background-color: transparent;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: transparent;
     border: none;
     border-radius: 50px;
@@ -2591,7 +2591,7 @@
     color: white;
 }
 
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     min-height: 450px;
 }
@@ -2633,7 +2633,7 @@
 .dots-1BwzZQ.themed-3T-OPr {
     color: white;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 /* Active Post Boxes */
@@ -2829,7 +2829,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-color: transparent !important;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
     background-image: radial-gradient(circle closest-side at 180px 180px, rgba(95, 95, 95, 0.75) 10%, rgba(0, 0, 0, 0.49) 100%, rgba(0, 0, 0, 0.49) 100%) !important;
@@ -2837,7 +2837,7 @@
     padding: 84px 83px;
 }
 
-.root-g14mjS.modal-3fnj3y .container-18GwIk {
+.root-1CAIjD.modal-3fnj3y .container-18GwIk {
     background-color: transparent !important;
     box-shadow: none;
     background-image: none;
@@ -2942,17 +2942,17 @@
     border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
@@ -2961,7 +2961,7 @@
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -3179,7 +3179,7 @@
     background-color: darkblue;
 }
   
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
   border-top-color: darkblue;
 }
 
@@ -3265,18 +3265,18 @@
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -3290,8 +3290,8 @@
     color: white;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3606,7 +3606,7 @@
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3850,12 +3850,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4123,8 +4123,8 @@
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -4156,7 +4156,7 @@
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4468,4 +4468,54 @@
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.chat-3t9F_n:before {
+    box-shadow: none;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.card-2guEcY a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
