--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 4.3
+ * @version 4.4
  */
 
 /* Main Background */
@@ -157,14 +157,14 @@
     height: 28px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #F44;
     color:  white;
     text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black,
     0 0 2px black, 0 0 2px black;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #F44;
 }
 
@@ -200,19 +200,19 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 16px;
     height: 16px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     background-clip: padding-box;
     border: 2px solid transparent;
     border-radius: 0px;
     background-color: #F44;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     border-color: transparent;
     background-color: transparent;
     border: none;
@@ -269,15 +269,15 @@
     border: 2px solid #F44;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #F44;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: #C67;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
@@ -287,7 +287,7 @@
     text-transform: lowercase;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: 0 0 8px 2px #F44;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
@@ -296,7 +296,7 @@
     background-color: transparent;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: #F44;
 }
 
@@ -309,7 +309,7 @@
     mask: none;
 }
 
-.avatar-3mTjvZ .avatar-b5OQ1N {
+.avatar-3mTjvZ .avatar-31d8He {
     border-radius: 6px;
 }
 
@@ -337,11 +337,11 @@
     border: 2px solid #D12;
 }
 
-.side-2ur1Qk .header-2Kx1US {
+.side-1lrxIh .header-2F5_LB {
     padding: 12px 10px;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     color: white;
     text-transform: capitalize;
     line-height: unset;
@@ -352,18 +352,18 @@
     font-weight: bold;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-image: -webkit-linear-gradient(121deg, transparent 33%, #f44 64%) !important;
     border: 1px solid #F44;
     background-color: transparent !important;
 }
 
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #C67;
 }
 
-.brand-3g5E0C.item-3XjbnG:hover, .themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover, .themed-qqoYp3.item-2GWPIy:hover {
     color: white;
 }
 
@@ -418,7 +418,7 @@
     background-color: rgba(17, 136, 238, .5);
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: #f44;
     border-width: 2px;
     background-color: rgba(0,0,0,.3);
@@ -470,19 +470,19 @@
     border-radius: 6px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 15px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #F44;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, .auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, .auto-2TJ1RH::-webkit-scrollbar-track {
     border-radius: 6px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track, .theme-dark .feature-2IUcBI {
+.auto-2TJ1RH::-webkit-scrollbar-track, .theme-dark .feature-2IUcBI {
     background-color: transparent;
 }
 
@@ -503,11 +503,11 @@
     background-color: transparent;
 }
 
-.cardPrimary-3qRT__, .cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: transparent;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0,0,0,.2);
 }
 
@@ -563,7 +563,7 @@
     border: 1px solid #F44;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(
 0deg
 ,transparent,transparent 1px,#F44 0,#F44 2px,transparent 0);
@@ -657,7 +657,7 @@
     text-shadow: 0 0 3px black, 0 0 3px black, 0 0 3px black;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     border: none;
     background-color: rgba(0,0,0,.2);
 }
@@ -786,7 +786,7 @@ background-color: transparent  !important;
     color: white;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP)[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl)[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
     background-color: rgba(255,0,0,.3) !important;
 }
 
@@ -794,12 +794,12 @@ background-color: transparent  !important;
     color: silver;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
     box-shadow: none;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     box-shadow: none;
     background-color: transparent;
 }
@@ -812,7 +812,7 @@ background-color: transparent  !important;
     color: #F44;
 }
 
-.footer-31IekZ a, .link-3PveBK a {
+.footer-1KGV6y a, .link-3PveBK a {
     color: #f44;
 }
 
@@ -951,10 +951,10 @@ background-color: transparent  !important;
     mask: none;
 }
 
-.headerAvatar-GgCKcl .avatar-b5OQ1N,
-.avatar-15QyCc .avatar-b5OQ1N,
-.avatar-2MSPKk .avatar-b5OQ1N,
-.friend-8ZraY7 .avatar-135A-D .avatar-b5OQ1N {
+.headerAvatar-GgCKcl .avatar-31d8He,
+.avatar-15QyCc .avatar-31d8He,
+.avatar-2MSPKk .avatar-31d8He,
+.friend-8ZraY7 .avatar-135A-D .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -1296,7 +1296,7 @@ background-color: transparent  !important;
     mask: none;
 }
 
-.avatarSizeOverride-sfatEO .avatar-b5OQ1N {
+.avatarSizeOverride-sfatEO .avatar-31d8He {
     border-radius: 2px;
 }
 
@@ -1494,12 +1494,12 @@ background-color: transparent  !important;
     mask: none;
 }
 
-.avatar-1HDIsL .avatar-b5OQ1N,
-.avatar-6qzftW .avatar-b5OQ1N,
-.container-YkUktl .avatar-1EWyVD .avatar-b5OQ1N,
-.avatar-2Vndt_ .avatar-b5OQ1N,
-.avatar-3QF_VA .avatar-b5OQ1N,
-.listAvatar-2bU5Uh .avatar-b5OQ1N {
+.avatar-1HDIsL .avatar-31d8He,
+.avatar-6qzftW .avatar-31d8He,
+.container-YkUktl .avatar-1EWyVD .avatar-31d8He,
+.avatar-2Vndt_ .avatar-31d8He,
+.avatar-3QF_VA .avatar-31d8He,
+.listAvatar-2bU5Uh .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -1558,11 +1558,11 @@ background-color: transparent  !important;
     background-color: #f44 !important;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, .colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, .colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #f44;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-color: transparent;
     box-shadow: none !important;
 }
@@ -1784,7 +1784,7 @@ background-color: transparent  !important;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #474747 30%, #000000 87%);
 }
 
-.brand-3g5E0C.item-3XjbnG, .themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy, .themed-qqoYp3.item-2GWPIy {
     color: white;
 }
 
@@ -1804,7 +1804,7 @@ background-color: transparent  !important;
     color: white;
 }
 
-.theme-dark .activeButton-LRWFC_, .theme-dark .activeButton-LRWFC_:hover, .theme-light .activeButton-LRWFC_, .theme-light .activeButton-LRWFC_:hover {
+.theme-dark .activeButton-2K2Fwx, .theme-dark .activeButton-2K2Fwx:hover, .theme-light .activeButton-2K2Fwx, .theme-light .activeButton-2K2Fwx:hover {
     background-color: #f44;
 }
 
@@ -1812,7 +1812,7 @@ background-color: transparent  !important;
     border-radius: 5px;
 }
 
-.pageButton-1GMGeJ:hover {
+.pageButton-uta6J3:hover {
     color: white;
     background-color: rgba(204, 102, 119, .7);
 }
@@ -1884,18 +1884,18 @@ background-color: transparent  !important;
     border: 2px inset white;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     border-color: transparent;
     background-color: transparent;
     border: none;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background-color: #f44;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 10px;
 }
 
@@ -1903,15 +1903,15 @@ background-color: transparent  !important;
     background: transparent;
 }
 
-.colorDefault-CDqZdO .check-3HZJs4 {
+.colorDefault-2_rLdz .check-3-73a4 {
     color: #C67;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o, .colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b, .colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE {
+.colorDefault-2_rLdz.focused-3LIdPu .checkbox-397WsK, .colorDefault-2_rLdz.focused-3LIdPu .radioSelection-3PDNAQ, .colorDefault-2_rLdz.focused-3LIdPu .subtext-1mqKVB {
     color: #f44;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: white;
 }
 
@@ -2076,7 +2076,7 @@ background-color: transparent  !important;
     color: #f44;
 }
 
-.inviteRowAvatar-3ETE3i .avatar-b5OQ1N {
+.inviteRowAvatar-3ETE3i .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -2330,7 +2330,7 @@ background-color: transparent  !important;
 .autocompleteRowIcon-Br97vl foreignObject {
     mask: none;
 }
-.autocompleteRowIcon-Br97vl .avatar-b5OQ1N {
+.autocompleteRowIcon-Br97vl .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -2391,11 +2391,11 @@ background-color: transparent  !important;
     background-color: transparent;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, .top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #f44;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #C67;
 }
 
@@ -2461,7 +2461,7 @@ background-color: transparent  !important;
     mask: none;
 }
 
-.applicationStreamingAvatar-3RXs7A .avatar-b5OQ1N {
+.applicationStreamingAvatar-3RXs7A .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -2469,7 +2469,7 @@ background-color: transparent  !important;
     mask: none;
 }
 
-.partyMember-YLjOa7 .avatar-b5OQ1N {
+.partyMember-YLjOa7 .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -2529,7 +2529,7 @@ background-color: transparent  !important;
     background-color: #180 !important;
 }
 
-.svg-2zuE5p > foreignObject {
+.svg-2ifYOU > foreignObject {
     mask: none;
 }
 
@@ -2537,7 +2537,7 @@ background-color: transparent  !important;
     border-radius: 12px;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #F44;
 }
 
@@ -2600,7 +2600,7 @@ background-color: transparent  !important;
     margin-top: -2px !important;
 }
   
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     height: 450px;
 }
@@ -2648,7 +2648,7 @@ background-color: transparent  !important;
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
     border: 2px solid #C67;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 .theme-dark .container-2qVG6q.isOpen-2OXbFs {
@@ -2797,7 +2797,7 @@ background-color: transparent  !important;
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-radial-gradient(50% 53%, ellipse cover, #292929 15%, #000000 71%);
 }
@@ -2899,17 +2899,17 @@ background-color: transparent  !important;
     border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
@@ -2918,7 +2918,7 @@ background-color: transparent  !important;
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -3136,7 +3136,7 @@ background-color: transparent;
     background-color: #f44;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
 border-top-color: #f44;
 }
 
@@ -3170,24 +3170,24 @@ border-top-color: #f44;
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3496,7 +3496,7 @@ border-top-color: #f44;
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3775,12 +3775,12 @@ border-top-color: #f44;
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -4048,8 +4048,8 @@ border-top-color: #f44;
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -4081,7 +4081,7 @@ border-top-color: #f44;
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4393,6 +4393,52 @@ border-top-color: #f44;
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.card-2guEcY a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
 /* Main Color */
 .main-color{color: #F44;}
