--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 4.3
+ * @version 4.4
  */
 
  .app-2CXKsg {
@@ -131,7 +131,7 @@
     color: white;
 }
 
-.applicationStreamingAvatar-3RXs7A .avatar-b5OQ1N,
+.applicationStreamingAvatar-3RXs7A .avatar-31d8He,
 .voiceSectionGuildImage-TctMOd, .voiceSectionNoGuildImageWrapper-17kLyh,
 .voiceSectionAssets-1dg-E5 {
     border-radius: 4px;
@@ -149,7 +149,7 @@
     background-color: rgba(0, 0, 0, 0.28);
 }
 
-.partyMember-YLjOa7 .avatar-b5OQ1N {
+.partyMember-YLjOa7 .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -359,9 +359,9 @@
     color: white;
 }
 
-.cozy-VmLDNB .timestamp-p1Df1m, .brand-3g5E0C.item-3XjbnG, .themed-2-lozF.item-3XjbnG,
-.brand-3g5E0C.item-3XjbnG:hover, .themed-2-lozF.item-3XjbnG:hover,
-.selected-g-kMVV.item-3XjbnG, .selected-g-kMVV.item-3XjbnG:hover,
+.cozy-VmLDNB .timestamp-p1Df1m, .brand-2EKq3J.item-2GWPIy, .themed-qqoYp3.item-2GWPIy,
+.brand-2EKq3J.item-2GWPIy:hover, .themed-qqoYp3.item-2GWPIy:hover,
+.selected-1sf9UK.item-2GWPIy, .selected-1sf9UK.item-2GWPIy:hover,
 .body-GBnhET {
     color: white;
 }
@@ -371,12 +371,12 @@
     opacity: 1;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #76aad9;
     border: 2px outset #76aad9;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #61a5d8 !important;
     border: 2px inset #61a5d8 !important;
 } 
@@ -417,37 +417,37 @@
     color: white;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: none;
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
     border-radius: 7px;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, .colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, .colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #00DFF1;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: #76AAD9;
     border: 2px outset #76AAD9;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #61A5D8;
     border: 2px inset #61A5D8;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: #00DFF1;
 }
 
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #FFEC65;
     border-radius: 40px;
 }
@@ -543,16 +543,16 @@
     background-color: rgba(31, 61, 255, .89);
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #61A5D8;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #61A5D8;
 }
 
@@ -648,7 +648,7 @@
     border: #4d4d4d 3px groove;
 }
 
-.wrapper-1VLyxH, .avatar-b5OQ1N {
+.wrapper-3Un6-K, .avatar-31d8He {
     border-radius: 5px !important;
 }
 
@@ -903,7 +903,7 @@
     background-color: #76AAD9;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
     box-shadow: none;
 }
@@ -917,7 +917,7 @@
     border-bottom: 1px solid black;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     background-color: transparent;
     box-shadow: none;
 }
@@ -1134,32 +1134,32 @@
     background-color: #00AD89;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 22px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #61A5D8;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, .auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, .auto-2TJ1RH::-webkit-scrollbar-track {
     border-radius: 3px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 12px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background-color: #61A5D8;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
 }
@@ -1468,7 +1468,7 @@
     background-color: transparent;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP)[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl)[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] {
     background-color: #B02121 !important;
     border: none !important;
     color: white !important;
@@ -1487,7 +1487,7 @@
     color: silver;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 12px;
     font-weight: 500;
     text-transform: capitalize;
@@ -1587,11 +1587,11 @@
     background-color: transparent;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, .top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #61A5D8 !important;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #76AAD9;
 }
 
@@ -1627,12 +1627,12 @@
     background-color: #61A5D8;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ, .text-2iTkaw a, .body-1JxAWB a, .theme-dark .checkBoxLabel-16BK2g a, .theme-dark .footerText-2QLGHU a, .theme-dark .subText-1CcYgq a,
+.lookLink-13iF2K.colorLink-34zig_, .text-2iTkaw a, .body-1JxAWB a, .theme-dark .checkBoxLabel-16BK2g a, .theme-dark .footerText-2QLGHU a, .theme-dark .subText-1CcYgq a,
 .notice-5OG6bf a {
     color: #94CEE6;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(0deg,transparent,transparent 1px,#94CEE6 0,#94CEE6 2px,transparent 0);
 }
 
@@ -1793,7 +1793,7 @@
     background-color: #61a5d8;
 }
 
-.svg-2zuE5p > mask {
+.svg-2ifYOU > mask {
     display: none;
 }
 
@@ -2073,15 +2073,15 @@
     box-shadow: none;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0, 0, 0, 0.28);
 }
 
-.cardPrimary-3qRT__, .cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: #61A5D8;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: transparent;
     border: none;
 }
@@ -2114,7 +2114,7 @@
     background-color: rgba(0, 0, 0, 0.28);
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: transparent;
 }
 
@@ -2448,7 +2448,7 @@
     margin-top: -2px !important;
 }
   
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     height: 450px;
 }
@@ -2500,7 +2500,7 @@
     border: 2px solid transparent;
     border-radius: 5px;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
@@ -2650,7 +2650,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
     border-radius: 4px;
@@ -2759,22 +2759,22 @@
     background-color: transparent;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color:  black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -2805,7 +2805,7 @@
     background-color: #61A5D8;
 }
   
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
   border-top-color: #61A5D8;
 }
 
@@ -2839,24 +2839,24 @@
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3210,7 +3210,7 @@
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3485,12 +3485,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -3745,8 +3745,8 @@
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3778,7 +3778,7 @@
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4090,6 +4090,51 @@
     background-color: rgba(255, 255, 255, .15);
 }
 
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.card-2guEcY a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
+}
 /* Main Color */
 .main-color {color: #61A5D8;}
 
