--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 1.8
+ * @version 1.9
 */
 
 .app-2CXKsg {
@@ -30,21 +30,21 @@
     background: none;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 10px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, .2);
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb,
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb,
+.auto-2TJ1RH::-webkit-scrollbar-track {
     border: none;
     border-radius: 0;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
@@ -90,22 +90,22 @@
 
 .description-foE_WP a,
 .labelDescriptor-2top7R a,
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: #D0DFFF;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     --button--underline-color: #D0DFFF;
 }
 
-.root-g14mjS {
+.root-1CAIjD {
     background-image: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
     border-radius: 20px;
 }
 
 
-.theme-dark .root-g14mjS,
-.theme-dark .footerSeparator-VzAYwb {
+.theme-dark .root-1CAIjD,
+.theme-dark .footerSeparator-3U8YsT {
     box-shadow: none;
 }
 
@@ -114,7 +114,7 @@
     background-color: rgba(0, 0, 0, .5) !important;
 }
 
-.footer-31IekZ {
+.footer-1KGV6y {
     background-color: transparent;
 }
 
@@ -159,50 +159,50 @@
     opacity: 0;
 }
 
-.side-2ur1Qk .header-2Kx1US,
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .header-2F5_LB,
+.side-1lrxIh .item-2GWPIy {
     padding: 8px 10px;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 14px;
     font-weight: 400;
     text-transform: capitalize;
     color: #e2e2e2;
 }
 
-.item-3XjbnG {
+.item-2GWPIy {
     font-size: 12px;
 }
 
-.brand-3g5E0C.item-3XjbnG,
-.themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy,
+.themed-qqoYp3.item-2GWPIy {
     color: rgba(255, 255, 255, .24);
     border-bottom: 2px solid transparent;
     transition: all .4s;
     border-radius: 0;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP),
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl),
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: transparent;
     border-bottom: 2px solid transparent;
 }
 
-.brand-3g5E0C.item-3XjbnG:hover,
-.themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover,
+.themed-qqoYp3.item-2GWPIy:hover {
     color: rgba(255, 255, 255, .54);
     font-size: 15px;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG,
-.topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
+.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: transparent;
     border-bottom: 2px solid #95A8B0 !important;
 }
 
-.selected-g-kMVV.item-3XjbnG,
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy,
+.selected-1sf9UK.item-2GWPIy:hover {
     color: var(--interactive-active) !important;
 }
 
@@ -223,40 +223,40 @@
     background-color: #95A8B0 !important;
 }
 
-.separator-2wx7h6 {
+.separator-2N511j {
     background-color: transparent;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 6px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 0;
     background-color: rgba(0, 0, 0, .4);
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
 }
 
-.tooltip-14MtrL {
+.tooltip-33Jwqe {
     border-radius: 15px;
     font-weight: 400;
     font-size: 14px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #95A8B0;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #95A8B0;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
     text-shadow: 0 0 5px black, 0 0 2px black, 0 2px 0 black;
@@ -273,12 +273,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #4B5569;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active,
-.top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active,
+.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #95A8B0;
 }
 
@@ -669,12 +669,12 @@
     fill: white;
 }
 
-.cardPrimary-3qRT__, 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, 
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: #95A8B0;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0, 0, 0, .5);
 }
 
@@ -684,11 +684,11 @@
     border-radius: 12px;
 }
 
-.card-16VQ8C a {
+.card-2guEcY a {
     color: #D0DFFF;
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: rgba(149, 168, 176, .3);
 }
 
@@ -751,7 +751,7 @@
     border-radius: 0;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #95A8B0;
 }
 
@@ -906,7 +906,7 @@
     background-color: transparent;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: rgba(0, 0, 0, .1);
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 10px;
@@ -1156,8 +1156,8 @@
     color: white;
 }
 
-.avatarWrapper-3y0KZ1 .svg-2azL_l > circle,
-.avatar-1YsFQ1 .svg-2azL_l > circle {
+.avatarWrapper-3y0KZ1 .svg-1G_H_8 > circle,
+.avatar-1YsFQ1 .svg-1G_H_8 > circle {
     fill: black;
 }
 
@@ -1165,29 +1165,29 @@
     color: #e2e2e2;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: none;
     background-image: linear-gradient(63deg, #4b5569 0%, #2d353f 89%);
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: #D0DFFF;
     border: 1px solid transparent;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: rgba(149, 168, 176, .3);
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     color: #e2e2e2;
 }
 
-.colorDefault-CDqZdO .check-3HZJs4 {
+.colorDefault-2_rLdz .check-3-73a4 {
     color: white;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #4B5569;
     color: white;
     border: 1px solid rgba(0, 0, 0, .4);
@@ -1229,12 +1229,12 @@
     color: #e2e2e2;
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: white;
 }
 
-.selected-g-kMVV.item-3XjbnG, .selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, .selected-1sf9UK.item-2GWPIy:hover {
     color: white !important;
 }
 
@@ -1246,11 +1246,11 @@
     color: white !important;
 }
 
-.wrapper-28eC3z>.svg-2zuE5p mask {
+.wrapper-2PSQCG>.svg-2ifYOU mask {
     display: none;
 }
 
-.wrapper-28eC3z,
+.wrapper-2PSQCG,
 .icon-3AqZ2e {
     border-radius: 90px;
 }
@@ -1432,16 +1432,16 @@
     border: 3px solid rgba(149, 168, 176, .5);
 }
 
-.separator-1So4YB {
+.separator-12G2Op {
     border-bottom: none;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, 
-.colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, 
+.colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #95A8B0;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: #4B5569;
 }
 
@@ -1799,7 +1799,7 @@
     height: 17px !important;
 }
 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     background: rgba(0, 0, 0, .2);
 }
 
@@ -1870,23 +1870,23 @@
     color: silver;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: #2d353f;
     border: 1px solid black;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     color: white;
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(149, 168, 176, .08);
     color: white;
 }
 
 .focused-qp-W9B .itemLabel-27pirQ>[style*="color:"],
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) .itemLabel-27pirQ>[style*="color:"] {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) .itemLabel-27pirQ>[style*="color:"] {
     color: white !important;
 }
 
@@ -2095,7 +2095,7 @@
     background: rgba(0, 0, 0, .09);
 }
 
-.root-g14mjS .content-2hZxGK>[style*="overflow: hidden"] {
+.root-1CAIjD .content-2hZxGK>[style*="overflow: hidden"] {
    overflow: visible !important;
 }
 
@@ -2348,7 +2348,7 @@
     background-color: rgba(0, 0, 0, .1);
 }
 
-.theme-dark .separator-2lLxgC {
+.theme-dark .separator-3C440w {
     box-shadow: none;
 }
 
@@ -2495,7 +2495,7 @@
     box-shadow: inset 0 0 0 2px #95A8B0,inset 0 0 0 3px black;
 }
 
-.root-g14mjS,
+.root-1CAIjD,
 .scrollTierBackground-BnWR8k,
 .modalHeader-3X0A4K {
     background-color: transparent;
@@ -2533,7 +2533,7 @@
     background-color: #95A8B0;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
     border-top-color: #95A8B0;
 }
 
@@ -2603,13 +2603,13 @@
     box-shadow: 0 0 2px 3px rgba(149, 168, 176, .6);
 }
 
-.pageButton-1GMGeJ:hover {
+.pageButton-uta6J3:hover {
     color: #e2e2e2;
     background-color: #4B5569;
 }
 
-.theme-dark .activeButton-LRWFC_,
-.theme-dark .activeButton-LRWFC_:hover {
+.theme-dark .activeButton-2K2Fwx,
+.theme-dark .activeButton-2K2Fwx:hover {
     background-color: #95A8B0;
 }
 
@@ -2649,7 +2649,7 @@
     color: white;
 }
 
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 
@@ -3476,7 +3476,7 @@
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3737,7 +3737,7 @@
     color: #FFF88D;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -3993,8 +3993,8 @@
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -4026,7 +4026,7 @@
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4333,4 +4333,49 @@
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.iconWrapper-3plkqh {
+    background-color: black;
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
