--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.3
+ * @version 4.4
  */
 
  #app-mount .app-2CXKsg {
@@ -142,11 +142,11 @@
   background-color: rgba(0, 0, 0, .30) !important;
 }
 
-.theme-dark .activeButton-LRWFC_, .theme-dark .activeButton-LRWFC_:hover {
+.theme-dark .activeButton-2K2Fwx, .theme-dark .activeButton-2K2Fwx:hover {
  background-color:#9b2742;
 }
 
-.pageButton-1GMGeJ:hover {
+.pageButton-uta6J3:hover {
   color: white;
   background-color: #ad3950;
 }
@@ -198,7 +198,7 @@
   background: none;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
   background-color: rgba(0, 0, 0, .33);
   color: #fff;
 }
@@ -247,7 +247,7 @@
   background-color: rgba(0, 0, 0, .76);
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
   background-color: rgba(0, 0, 0, .76);
   box-shadow: none;
 }
@@ -357,7 +357,7 @@
   border: none !important;
 }
 
-.cardPrimary-3qRT__, .item-1TA5qI {
+.cardPrimary-pAe8Ed, .item-1TA5qI {
   border-color: #9b2742;
 }
 
@@ -386,30 +386,30 @@
   background-color: #15a952;
 }
 
-.side-2ur1Qk .header-2Kx1US, .side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .header-2F5_LB, .side-1lrxIh .item-2GWPIy {
   padding: 6px 11px;
 }
 
-.side-2ur1Qk .header-2Kx1US:first-child {
+.side-1lrxIh .header-2F5_LB:first-child {
   padding-top: 6px;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
   background-color: rgba(255,255,255,.13);
   color: white;
   margin-bottom: 10px;
 }
 
-.selected-g-kMVV.item-3XjbnG, .selected-g-kMVV.item-3XjbnG:hover, .themed-2-lozF.item-3XjbnG:hover, .input-2m5SfJ,
+.selected-1sf9UK.item-2GWPIy, .selected-1sf9UK.item-2GWPIy:hover, .themed-qqoYp3.item-2GWPIy:hover, .input-2m5SfJ,
 .icon-3CDcPB, .theme-dark .member-1q7VfX .tag-1YGWN9 {
   color: white;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover, .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover, .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover {
   background-color: rgba(173, 57, 80, .3);
 }
 
-.topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG,
+.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
 .theme-dark .header-145e10 .tabBar-1qdMr5 .tab-TRrPC8.active-1grPyy {
   background-color: #9b2742 !important;
   border: 1px solid black !important;
@@ -423,11 +423,11 @@
   border-left: none;
 }
 
-.topPill-3DJJNV .item-3XjbnG {
+.topPill-3DJJNV .item-2GWPIy {
   border: 1px solid transparent;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
   background-color: #9b2742 !important;
 }
 
@@ -461,7 +461,7 @@
   border: none;
 }
 
-.separator-2wx7h6, .divider-1aB8TP, .theme-dark #bd-settings-sidebar .ui-tab-bar-separator {
+.separator-2N511j, .divider-1aB8TP, .theme-dark #bd-settings-sidebar .ui-tab-bar-separator {
   background-color: transparent;
 }
 
@@ -485,7 +485,7 @@
   background-color: #e31515;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
   box-shadow: none;
   color: white;
 }
@@ -509,7 +509,7 @@
   mask: none;
 }
 
-#app-mount .avatar-b5OQ1N, #app-mount .wrapper-1VLyxH {
+#app-mount .avatar-31d8He, #app-mount .wrapper-3Un6-K {
   border-radius: 5px !important;
 }
 
@@ -546,7 +546,7 @@
   border: 2px solid #9b2742;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
   background-color: #0b0b0b;
   box-shadow: none;
 }
@@ -560,12 +560,12 @@
   background-color: #df0c0c;
 }
 
-.side-2ur1Qk .item-3XjbnG[style*="color: rgb(114, 137, 218);"] {
+.side-1lrxIh .item-2GWPIy[style*="color: rgb(114, 137, 218);"] {
   background-color: #2f45b5 !important;
   color: white !important;
 }
 
-.side-2ur1Qk .item-3XjbnG[style*="color: rgb(240, 71, 71);"] {
+.side-1lrxIh .item-2GWPIy[style*="color: rgb(240, 71, 71);"] {
   background-color: #c91b1b !important;
   color: white !important;
 }
@@ -608,7 +608,7 @@
   color: white;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
   background-color: rgba(0, 0, 0, .3);
 }
 
@@ -618,7 +618,7 @@
 }
 
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
   border-color: rgb(255, 0, 0, .5);
 }
 
@@ -898,11 +898,11 @@
   border-radius: 9px;
 }
 
-.separator-1So4YB {
+.separator-12G2Op {
   border: none;
 }
 
-.colorBrand-3cPPsm.focused-3qFvc8 {
+.colorBrand-3cPPsm.focused-3LIdPu {
   background-color: #5369b8 !important;
   color: white;
 }
@@ -912,20 +912,20 @@
 }
 
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
   background-color: #ad3950;
   color: white;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
   color: white;
 }
 
-.colorDanger-3n-KnP, .colorDanger-3n-KnP .checkbox-hADx5o, .colorDanger-3n-KnP .radioSelection-1UHp0b, #app-mount .danger-2dXSTE .hint-22uc-R {
+.colorDanger-3n-KnP, .colorDanger-3n-KnP .checkbox-397WsK, .colorDanger-3n-KnP .radioSelection-3PDNAQ, #app-mount .danger-2dXSTE .hint-22uc-R {
   color: #de2c2c;
 }
 
-.colorDanger-3n-KnP.focused-3qFvc8 {
+.colorDanger-3n-KnP.focused-3LIdPu {
   background-color: #de2c2c;
   color: white;
 }
@@ -1010,7 +1010,7 @@
   background: rgba(155, 39, 66, .7);
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, .top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
   border-bottom-color: #9b2742;
 }
 
@@ -1067,11 +1067,11 @@
   background-color: rgba(155, 39, 66, .4);
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
   background-color: #9b2742;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
   border-top-color: #ad3950;
 }
 
@@ -1252,7 +1252,7 @@
 }
 
 .lowMotionItem-1sQl-q,
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
   background-color: #9b2742;
   width: 14px;
   border-radius: 4px;
@@ -1608,16 +1608,16 @@
   color: white;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
   width: 11px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
   border-radius: 2px;
   background-color: #9b2742;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
   background-color: transparent;
   border: none;
 }
@@ -1629,8 +1629,8 @@
   border-radius: 4px;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), 
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
   background-color: #ad3950;
 }
 
@@ -1735,7 +1735,7 @@
   background-color: rgb(155, 39, 66, .5);
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
   width: 0;
 }
 
@@ -1761,20 +1761,20 @@
   width: 21px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
   background-color: rgba(155, 39, 66, .7);
   border-color: transparent;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
   background-color: rgba(155, 39, 66, .7);
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
   border-radius: 4px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
   background-color: transparent;
   border: none;
   border-radius: 4px;
@@ -1803,12 +1803,12 @@
   background-color: #9b2742;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, 
-.colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, 
+.colorDefault-2_rLdz .radioSelection-3PDNAQ {
   color: rgba(0, 0, 0, .26) !important;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
   color: white;
 }
 
@@ -1853,7 +1853,7 @@
   background: none;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
@@ -1988,8 +1988,8 @@
 }
 
 
-.avatarWrapperNormal-3wFMbf .wrapper-1VLyxH,
-.avatar-3EQepX.wrapper-1VLyxH {
+.avatarWrapperNormal-3wFMbf .wrapper-3Un6-K,
+.avatar-3EQepX.wrapper-3Un6-K {
   width: 110px !important;
   height: 110px !important;
 }
@@ -2215,7 +2215,7 @@
   background: none;
 }
 
-.headerAvatar-GgCKcl.wrapper-1VLyxH {
+.headerAvatar-GgCKcl.wrapper-3Un6-K {
   width: 46px !important;
   height: 46px !important;
   margin-left: -9px;
@@ -2375,7 +2375,7 @@
   background: none;
 }
 
-.svg-2zuE5p > mask {
+.svg-2ifYOU > mask {
   display: none;
 }
 
@@ -2477,7 +2477,7 @@
 .hover-color {color: #ad3950 rgb(173, 57, 80)}
 
 /* Links */
-.standardSidebarView-E9Pc3j a, .imageDetails-1t6Zms a, .primary-jw0I4K a, .footer-1Ip3Sd a, .lookLink-15mFoz.colorLink-1Md3RZ,
+.standardSidebarView-E9Pc3j a, .imageDetails-1t6Zms a, .primary-jw0I4K a, .footer-1Ip3Sd a, .lookLink-13iF2K.colorLink-34zig_,
 .bda-slist .bda-footer a, .markup-eYLPri a, .welcomeMessage-ULm0mo a, .theme-dark .filenameLinkWrapper-3Rc6sk, .theme-dark .filenameLinkWrapper-3Rc6sk a,
 .topic-11NuQZ a, .emptyStateCTA-206J-N a, .helpText-h3r3wC a, .colorStandard-21JIj7 a,
 .editChannelButton-1dYN-G, .fakeLink-1wGafz, .button-1kija8,
@@ -2486,7 +2486,7 @@
   color: lightgreen;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
   background-image: linear-gradient(0deg,transparent,transparent 1px,lightgreen 0,lightgreen 2px,transparent 0);
 }
 
@@ -2657,7 +2657,7 @@
   top: -3px;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
   background-color: rgba(0, 0, 0, .4);
   border: none;
 }
@@ -2892,12 +2892,12 @@
   border-bottom: none;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
   border-bottom-color: #ad3950;
 }
 
-.brand-3g5E0C.item-3XjbnG:hover, 
-.themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover, 
+.themed-qqoYp3.item-2GWPIy:hover {
   color: white;
 }
 
@@ -3019,7 +3019,7 @@
   margin-top: -2px !important;
 }
 
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
   width: 650px;
   height: 450px;
 }
@@ -3053,7 +3053,7 @@
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
   border: 2px solid #ad3950;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
   box-shadow: none;
 }
 .interactiveCard-2iMtdk.selected-sszUNx, 
@@ -3203,7 +3203,7 @@
   border-top: none;
   color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
   background-color: #380d0d !important;
 }
 
@@ -3299,17 +3299,17 @@
   border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
   background-color: black;
   border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
   color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
   border: 1px solid transparent;
 }
 
@@ -3318,7 +3318,7 @@
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
   background-color: rgba(255, 255, 255, .4);
   border: 1px solid white;
   color: white;
@@ -3536,7 +3536,7 @@ background-color: transparent;
   background-color: #9b2742;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
 border-top-color: #9b2742;
 }
 
@@ -3570,18 +3570,18 @@ border-top-color: #9b2742;
   background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
   fill: black;
   opacity: 1 !important;
 }
@@ -3594,8 +3594,8 @@ border-top-color: #9b2742;
   color: white;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3887,7 +3887,7 @@ border-top-color: #9b2742;
   box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
   background: #141414;
 }
 
@@ -3961,7 +3961,7 @@ border-top-color: #9b2742;
   border-color: transparent;
 }
 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed.editable-2xfXMr {
   background: rgba(0,0,0,.6);
 }
 
@@ -4128,12 +4128,12 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
   border-bottom-color: silver;
 }
 
@@ -4401,8 +4401,8 @@ border-top-color: #9b2742;
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
   background-color: rgba(255, 255, 255, .1);
 }
 
@@ -4434,7 +4434,7 @@ border-top-color: #9b2742;
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
   background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4751,4 +4751,54 @@ border-top-color: #9b2742;
 
 .row-7jGzPR:hover {
   background-color: rgba(255, 255, 255, .15);
+}
+
+.accountBtnInner-1DCgBm {
+  background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+  background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+  background-color: rgba(0, 0, 0, .4);
+  border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+stroke: white;
+fill: white;
+}
+
+.card-2guEcY a {
+  color: lightgreen;
+  font-weight: 600;
+}
+
+.defaultColor-1EVLSt a {
+  color: lightgreen;
+  font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+  color: gold;
+}
+
+.wrapper-1gVUIN.minimum-fXpVNc {
+  background-color: rgba(0, 0, 0, .4);
+}
+
+.resizeHandle-PBRzPC {
+  background: none;
 }
