--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 4.3
+ * @version 4.4
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -54,7 +54,7 @@ textarea,
         monospace;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: rgba(0, 0, 0, 0.33);
     color: #fff;
 }
@@ -128,7 +128,7 @@ textarea,
     border-radius: 20%;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: #008c99;
 }
 
@@ -153,7 +153,7 @@ textarea,
     opacity: 1;
 }
 
-.tooltipPointer-3L49xb,
+.tooltipPointer-sMBQqe,
 .theme-dark .sectionAccountCredit-1IqaxB,
 .theme-dark .subscriptionDetails-ZcKNHC,
 .marketingRefreshTier2Cta-2dN2zP {
@@ -165,7 +165,7 @@ textarea,
 }
 
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     background-color: transparent;
     box-shadow: none;
 }
@@ -396,7 +396,7 @@ textarea,
     box-shadow: none !important;
 }
 
-.theme-dark .cardPrimaryOutline-1ofwVz {
+.theme-dark .cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: rgba(0, 0, 0, 0.6);
     border-radius: 12px;
 }
@@ -409,12 +409,12 @@ textarea,
     background-color: transparent;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
 
-.theme-dark .separator-1So4YB {
+.theme-dark .separator-12G2Op {
     border-bottom: none;
 }
 
@@ -479,7 +479,7 @@ textarea,
     display: none;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background: linear-gradient(1deg, #000000 0%, #008c99 47%, #000000 100%);
 }
 
@@ -950,8 +950,8 @@ textarea,
     background-color: rgba(0, 0, 0, 0.324);
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -980,7 +980,7 @@ textarea,
 }
 
 .lowMotionItem-1sQl-q,
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #008c99;
     width: 14px;
     border-radius: 10px;
@@ -1018,17 +1018,17 @@ textarea,
     background-color: rgba(0, 0, 0, 0.3);
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #008c99;
     border: none;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 6px;
 }
 
@@ -1312,7 +1312,7 @@ textarea,
     top: 3px;
 }
 
-.messageGroupWrapper-1jf_7C .wrapper-1VLyxH {
+.messageGroupWrapper-1jf_7C .wrapper-3Un6-K {
     position: relative;
     top: -12px;
 }
@@ -1406,7 +1406,7 @@ textarea,
 
 /* Emotes Code */
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #008c99;
 }
 
@@ -1455,11 +1455,11 @@ textarea,
     background-color: transparent;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o {
+.colorDefault-2_rLdz .checkbox-397WsK {
     color: rgba(0, 0, 0, 0.26) !important;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: white;
 }
 
@@ -1534,12 +1534,12 @@ textarea,
     background-color: #d20f04 !important;
 }
 
-.theme-dark .header-2Kx1US {
+.theme-dark .header-2F5_LB {
     font-size: 15px;
     color: white;
 }
 
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .item-2GWPIy {
     padding-top: 4px;
     padding-bottom: 4px;
     margin-bottom: 3px;
@@ -1568,8 +1568,8 @@ textarea,
     background-color: rgba(0, 0, 0, 0.33);
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG,
-.topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG,
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
+.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy,
 .theme-dark .header-145e10 .tabBar-1qdMr5 .tab-TRrPC8.active-1grPyy {
     background-color: rgba(0, 140, 153, 0.57) !important;
     border: 2px solid #28818c !important;
@@ -1577,27 +1577,27 @@ textarea,
     ;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover,
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover,
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover {
     background-color: rgba(0, 140, 153, 0.21);
     border: 2px solid rgba(0, 124, 137, 0.23);
     /* 2nd Color of Monochromatic Colors */
     ;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP),
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl),
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(0, 140, 153, 0.21);
     border: 2px solid rgba(0, 124, 137, 0.23);
 }
 
-.cardPrimary-3qRT__,
+.cardPrimary-pAe8Ed,
 .item-1TA5qI {
     background-color: black;
     border: 2px solid rgba(0, 0, 0, 0.33);
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0, 0, 0, 0.32);
 }
 
@@ -1681,7 +1681,7 @@ textarea,
     border: none !important;
 }
 
-.separator-2wx7h6 {
+.separator-2N511j {
     background-color: #008c99;
 }
 
@@ -1753,7 +1753,7 @@ textarea,
     background: #008c99 !important;
 }
 
-.cameraWrapper-3a7Ngv,
+.cameraWrapper-nG8dpo,
 .theme-dark .emptyUsers--hiToV {
     background-color: transparent;
     border-color: transparent;
@@ -1999,9 +1999,9 @@ textarea,
     filter: hue-rotate(90deg) brightness(3);
 }
 
-[class*="role-3pGE29 item-3XjbnG selected-g-kMVV themed-2-lozF"],
-[class*="role-3pGE29 item-3XjbnG themed-2-lozF"],
-.role-3pGE29 .item-3XjbnG[style*="background-color"] {
+[class*="role-3pGE29 item-2GWPIy selected-1sf9UK themed-qqoYp3"],
+[class*="role-3pGE29 item-2GWPIy themed-qqoYp3"],
+.role-3pGE29 .item-2GWPIy[style*="background-color"] {
     padding-top: 4px !important;
 }
 
@@ -2075,11 +2075,11 @@ textarea,
 
 .standardSidebarView-E9Pc3j a,
 .imageDetails-1t6Zms a,
-.theme-dark .card-16VQ8C a,
+.theme-dark .card-2guEcY a,
 .bda-slist .bda-footer a,
 .content-s2SEQO a,
 .footer-1Ip3Sd a,
-.lookLink-15mFoz.colorLink-1Md3RZ,
+.lookLink-13iF2K.colorLink-34zig_,
 .theme-dark .markup-eYLPri a,
 .mutedChannelsHook-3uTdkn,
 .quickswitcher-pKcM9U a,
@@ -2099,7 +2099,7 @@ textarea,
     color: #66cff9;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(0deg,
             transparent,
             transparent 1px,
@@ -2123,7 +2123,7 @@ textarea,
     opacity: 0.5 !important;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-color: rgba(0, 0, 0, 0.55);
     box-shadow: none;
 }
@@ -2203,7 +2203,7 @@ textarea,
 
 /* New Things Here */
 
-.colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #008c99 !important;
 }
 
@@ -2320,12 +2320,12 @@ textarea,
     background-color: transparent;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active,
-.top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active,
+.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #008c99;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: white;
 }
 
@@ -2431,7 +2431,7 @@ textarea,
 
 /* New Things Here */
 
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     height: 450px;
 }
@@ -2480,7 +2480,7 @@ textarea,
     border: 2px solid black;
 }
 
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 
@@ -2674,7 +2674,7 @@ textarea,
     color: gold;
 }
 
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-color: transparent;
     background-attachment: fixed;
     background-image: linear-gradient(to bottom left, #454545 21%, #000000 100%);
@@ -2787,17 +2787,17 @@ textarea,
     border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
@@ -2806,7 +2806,7 @@ textarea,
 }
 
 .focused-qp-W9B,
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -3025,7 +3025,7 @@ textarea,
     background-color: #008c99;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
     border-top-color: #008c99;
 }
 
@@ -3059,18 +3059,18 @@ textarea,
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -3371,7 +3371,7 @@ textarea,
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3452,7 +3452,7 @@ textarea,
     border-color: transparent;
 }
 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     background: rgba(0,0,0,.6);
 }
 
@@ -3638,12 +3638,12 @@ textarea,
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -3919,8 +3919,8 @@ textarea,
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3952,7 +3952,7 @@ textarea,
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4273,4 +4273,53 @@ textarea,
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.iconWrapper-3plkqh {
+    background-color: black;
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.wrapper-1gVUIN.minimum-fXpVNc {
+    background-color: rgba(0, 0, 0, .4);
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
