--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.5
+ * @version 1.6
 */
 
 .app-2CXKsg, 
@@ -43,11 +43,11 @@
     background-color: #FF0000;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #616161;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
     transform: none !important;
@@ -59,7 +59,7 @@
     animation-fill-mode: none;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: transparent;
 }
 
@@ -86,38 +86,38 @@
     border-radius: 15px;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, 
-.topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, 
+.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #FF0000 !important;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
     color: white !important;
 }
 
-.topPill-3DJJNV .item-3XjbnG,
-.side-2ur1Qk .item-3XjbnG {
+.topPill-3DJJNV .item-2GWPIy,
+.side-1lrxIh .item-2GWPIy {
     border-radius: 5px;
 }
 
-.brand-3g5E0C.item-3XjbnG, 
-.themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy, 
+.themed-qqoYp3.item-2GWPIy {
     color: #F1F1F1;
     background-color: rgba(255, 255, 255, .1);
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), 
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(255, 255, 255, .2);
 }
 
-.brand-3g5E0C.item-3XjbnG:hover, 
-.themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover, 
+.themed-qqoYp3.item-2GWPIy:hover {
     color: #F1F1F1;
 }
 
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .item-2GWPIy {
     margin-bottom: 6px;
 }
 
@@ -265,16 +265,16 @@
     background-color: rgba(0, 0, 0, .3) !important;
 }
 
-.root-g14mjS {
+.root-1CAIjD {
     background-color: #282828;
     border-radius: 12px;
 }
 
-.footer-31IekZ {
+.footer-1KGV6y {
     background-color: transparent;
 }
 
-.theme-dark .footerSeparator-VzAYwb {
+.theme-dark .footerSeparator-3U8YsT {
     box-shadow: none;
 }
 
@@ -307,43 +307,43 @@
     background: rgba(255, 255, 255, .2);
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: none;
     background: #282828;
     border: 2px solid rgba(255, 255, 255, .1);
     border-radius: 8px;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: #F1F1F1;
     border-color: transparent;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, 
-.colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, 
+.colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: rgba(255, 255, 255, .1);
 }
 
-.colorDefault-CDqZdO .check-3HZJs4, 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz .check-3-73a4, 
+.colorDefault-2_rLdz.focused-3LIdPu {
     color: #F1F1F1;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: rgba(255, 255, 255, .1);
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o,
-.colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b {
+.colorDefault-2_rLdz.focused-3LIdPu .checkbox-397WsK,
+.colorDefault-2_rLdz.focused-3LIdPu .radioSelection-3PDNAQ {
     color: #3ea6ff;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE,
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .subtext-1mqKVB,
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: white;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: rgba(255, 255, 255, .2);
     color: #F1F1F1;
 }
@@ -391,18 +391,18 @@
     background-color: transparent;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -449,7 +449,7 @@
     background-color: rgba(255, 0, 0, .3);
 }
 
-.top-K_jibn .item-3XjbnG {
+.top-K_jibn .item-2GWPIy {
     background: none;
 }
 
@@ -457,12 +457,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .2);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #FF0000;
 }
 
@@ -474,7 +474,7 @@
     background-color: rgba(255, 255, 255, .2);
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #FF0000;
 }
 
@@ -531,7 +531,7 @@
     color: #0F0F0F !important;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     box-shadow: none;
 }
 
@@ -655,21 +655,21 @@
     font-weight: 600;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 7px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #FF0000;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, 
+.auto-2TJ1RH::-webkit-scrollbar-track {
     border: none;
     border-radius: 2px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
@@ -895,17 +895,17 @@
     color: white;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 5px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 2px;
     background-color: #FF0000;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
 }
@@ -1314,7 +1314,7 @@
     background-color: transparent;
 }
 
-.separator-1So4YB {
+.separator-12G2Op {
     border-bottom: none;
 }
 
@@ -1433,14 +1433,14 @@
 }
 
 .card-2EUiNF,
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: #282828;
     border-radius: 11px;
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.cardPrimary-3qRT__, 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, 
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: rgba(255, 255, 255, .1);
 }
 
@@ -1518,11 +1518,11 @@
 }
 
 .scroller-3_YDR2,
-.separator-2wx7h6 {
+.separator-2N511j {
     background-color: transparent;
 }
 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     background: rgba(0, 0, 0, .1);
 }
 
@@ -1545,7 +1545,7 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     color: #F1F1F1;
 }
 
@@ -1659,7 +1659,7 @@
     font-weight: 600;
 }
 
-.theme-dark .separator-2lLxgC {
+.theme-dark .separator-3C440w {
     box-shadow: none;
 }
 
@@ -1676,37 +1676,37 @@
     box-shadow: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     border-radius: 7px;
     background-color: #FFFFFF;
     border: none;
 }
 
-.container-2O1UgZ .container-2oNtJn {
+.container-2kTWmC .container-2oNtJn {
     background-color: rgba(0, 0, 0, .2);
     border-radius: 12px;
 }
 
-.container-2O1UgZ .input-2m5SfJ::-webkit-input-placeholder,
-.container-2O1UgZ .icon-3CDcPB,
-.item-1BCeuB * {
+.container-2kTWmC .input-2m5SfJ::-webkit-input-placeholder,
+.container-2kTWmC .icon-3CDcPB,
+.item-1Mjtru * {
     color: black !important;
 }
 
-.container-2O1UgZ .input-2m5SfJ {
+.container-2kTWmC .input-2m5SfJ {
     color: black;
 }
 
-.item-1BCeuB * {
+.item-1Mjtru * {
     font-weight: 600;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border-radius: 12px;
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: #eee;
     color: #0F0F0F;
 }
@@ -1789,12 +1789,12 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: #3ea6ff;
     font-weight: 600;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     --button--underline-color: #3ea6ff;
 }
 
@@ -1944,13 +1944,13 @@
     background-color: #282828;
 }
 
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     border: 1px solid rgba(255, 255, 255, .1);
     background-color: #282828;
 }
 
-.collapseable-DdnHFl:active,
-.collapseable-DdnHFl.toggled-3yp8ip:active {
+.collapseable-1FiLab:active,
+.collapseable-1FiLab.toggled-SfZPpc:active {
     border: 1px solid rgba(255, 255, 255, .2);
     background-color: #282828;
 }
@@ -2337,12 +2337,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .2);
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, 
-.top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, 
+.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #FF0000;
 }
 
@@ -2823,7 +2823,7 @@
     background-color: #616161;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
     border-top-color: transparent;
 }
 
@@ -3116,7 +3116,7 @@
     color: white !important;
 }
 
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 
@@ -3753,7 +3753,7 @@
     color: #F1F1F1;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #282828;
     border: 2px solid rgba(255, 255, 255, .1);
 }
@@ -3802,7 +3802,7 @@
     border-color: rgba(255, 255, 255, .2);
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: rgba(255, 255, 255, .1);
 }
 
@@ -3943,7 +3943,7 @@
 }
 
 .expandedInfo-1W31i3 a,
-.card-16VQ8C a {
+.card-2guEcY a {
     color: #3ea6ff;
     font-weight: 600;
 }
@@ -3957,7 +3957,7 @@
     background-color: transparent;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, .1);
 }
@@ -4240,4 +4240,50 @@
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.iconWrapper-3plkqh {
+    background-color: black;
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.contentPreview-3fWiuC {
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, .2);
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
