--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,12 +2,12 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 4.6
+ * @version 4.8
  */
 
 /* Main Background */
 .app-2CXKsg {
-    background-image: url(https://images.alphacoders.com/850/850831.jpg);
+    background-image: url(https://i.pinimg.com/originals/ba/51/e1/ba51e15a838450721f1160b338a35f37.jpg);
     background-size: cover;
     background-color: transparent;
 }
@@ -110,26 +110,26 @@
     mask: none;
 }
 
-.avatar-b5OQ1N {
+.avatar-31d8He {
     border-radius: 6px;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #991121 30%, #000000 86%);
     box-shadow: none;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #912;
     border: 1px solid #C13;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: #C13;
 }
 
@@ -164,13 +164,13 @@
     background-color: rgba(0,0,0,.6);
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ, .description-foE_WP a {
+.lookLink-13iF2K.colorLink-34zig_, .description-foE_WP a {
     color: #912;
     font-weight: bold;
     text-shadow: rgb(77, 2, 2) 0px 0px 4px,rgb(107, 0, 0) 0px 0px 4px;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(
 0deg
 ,transparent,transparent 1px,#912 0,#912 2px,transparent 0);
@@ -180,7 +180,7 @@
     background-color: rgba(0,0,0,.4) !important;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-color: transparent !important;
     box-shadow: none;
     background-image: -webkit-repeating-linear-gradient(65deg, #912 43%, #000 47%);
@@ -260,16 +260,16 @@
     color: white !important;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 15px;
     height: 11px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     background-color: #912;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     border-color: transparent;
     background-color: transparent;
     border: none;
@@ -333,20 +333,20 @@
     color: white;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #912;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
 }
 
-.tooltip-14MtrL {
+.tooltip-33Jwqe {
     border-radius: 8px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #912;
 }
 
@@ -394,7 +394,7 @@
     text-transform: capitalize;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 16px;
     font-weight: 400;
     text-transform: capitalize;
@@ -404,26 +404,26 @@
     margin-bottom: 3px;
 }
 
-.side-2ur1Qk .header-2Kx1US:first-child {
+.side-1lrxIh .header-2F5_LB:first-child {
     padding-top: 6px;
 }
 
-.item-3XjbnG {
+.item-2GWPIy {
     font-size: 13px;
     line-height: 12px;
 }
 
-.selected-g-kMVV.item-3XjbnG, .selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, .selected-1sf9UK.item-2GWPIy:hover {
     color: white;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: transparent;
     background-image: -webkit-linear-gradient(56deg, #000000 24%, #991121 100%);
     border: 2px solid #C13;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP):not(.side-2ur1Qk .item-3XjbnG[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: #C13;
 }
 
@@ -432,11 +432,11 @@
     border-radius: 8px;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0,0,0,.4);
 }
 
-.cardPrimary-3qRT__, .cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: transparent;
 }
 
@@ -444,30 +444,30 @@
     color: white;
 }
 
-.card-16VQ8C a {
+.card-2guEcY a {
     color: #912;
     font-weight: bold;
     text-shadow: rgb(77, 2, 2) 0px 0px 4px,rgb(107, 0, 0) 0px 0px 4px;
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: #912;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 10px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #912;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, .auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, .auto-2TJ1RH::-webkit-scrollbar-track {
     border: none;
     border-radius: 2px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
@@ -769,12 +769,12 @@
     border-width: 2px;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     background-color: transparent;
     box-shadow: none;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: transparent;
     border: none;
     border-radius: 7px;
@@ -1038,18 +1038,18 @@
     border: 2px inset white;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     border-color: transparent;
     background-color: transparent;
     border: none;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background-color: #912;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 10px;
 }
 
@@ -1057,15 +1057,15 @@
     background: transparent;
 }
 
-.colorDefault-CDqZdO .check-3HZJs4 {
+.colorDefault-2_rLdz .check-3-73a4 {
     color: #C13;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o, .colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b, .colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE {
+.colorDefault-2_rLdz.focused-3LIdPu .checkbox-397WsK, .colorDefault-2_rLdz.focused-3LIdPu .radioSelection-3PDNAQ, .colorDefault-2_rLdz.focused-3LIdPu .subtext-1mqKVB {
     color: #912;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: white;
 }
 
@@ -1211,7 +1211,7 @@
     color: white;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, .colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, .colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: white;
 }
 
@@ -1266,9 +1266,9 @@
     mask: none;
 }
 
-.friend-8ZraY7 .avatar-135A-D .avatar-b5OQ1N,
-.headerAvatar-GgCKcl .avatar-b5OQ1N,
-.avatar-2MSPKk .avatar-b5OQ1N {
+.friend-8ZraY7 .avatar-135A-D .avatar-31d8He,
+.headerAvatar-GgCKcl .avatar-31d8He,
+.avatar-2MSPKk .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -1392,8 +1392,8 @@
     mask: none;
 }
 
-.avatarSizeOverride-sfatEO .avatar-b5OQ1N,
-.avatar-1HDIsL .avatar-b5OQ1N {
+.avatarSizeOverride-sfatEO .avatar-31d8He,
+.avatar-1HDIsL .avatar-31d8He {
     border-radius: 3px;
 }
 
@@ -1603,7 +1603,7 @@
     color: white;
 }
 
-.container-x059i8, .pageButton-1GMGeJ {
+.container-x059i8, .pageButton-uta6J3 {
     color: white;
 }
 
@@ -1611,12 +1611,12 @@
     border-radius: 5px;
 }
 
-.pageButton-1GMGeJ:hover {
+.pageButton-uta6J3:hover {
     background-color: #C13;
     border: 2px outset #C13;
 }
 
-.theme-dark .activeButton-LRWFC_, .theme-dark .activeButton-LRWFC_:hover, .theme-light .activeButton-LRWFC_, .theme-light .activeButton-LRWFC_:hover {
+.theme-dark .activeButton-2K2Fwx, .theme-dark .activeButton-2K2Fwx:hover, .theme-light .activeButton-2K2Fwx, .theme-light .activeButton-2K2Fwx:hover {
     border: 2px inset #912;
     background-color: #912;
 }
@@ -1669,7 +1669,7 @@
     mask: none;
 }
 
-.avatar-6qzftW .avatar-b5OQ1N {
+.avatar-6qzftW .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -1790,11 +1790,11 @@
     mask: none;
 }
 
-.avatar-2Vndt_ .avatar-b5OQ1N,
-.avatarHint-k7pYop .avatar-b5OQ1N,
-.avatar-3QF_VA .avatar-b5OQ1N,
-.listAvatar-2bU5Uh .avatar-b5OQ1N, 
-.size24-9rrwDS .avatarContainerMasked-13fYnN .avatar-b5OQ1N {
+.avatar-2Vndt_ .avatar-31d8He,
+.avatarHint-k7pYop .avatar-31d8He,
+.avatar-3QF_VA .avatar-31d8He,
+.listAvatar-2bU5Uh .avatar-31d8He, 
+.size24-9rrwDS .avatarContainerMasked-13fYnN .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -1911,7 +1911,7 @@
     mask: none;
 }
 
-.applicationStreamingAvatar-3RXs7A .avatar-b5OQ1N {
+.applicationStreamingAvatar-3RXs7A .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -1919,7 +1919,7 @@
     mask: none;
 }
 
-.partyMember-YLjOa7 .avatar-b5OQ1N {
+.partyMember-YLjOa7 .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -2029,8 +2029,8 @@
     mask: none;
 }
 
-.container-YkUktl .avatar-1EWyVD .avatar-b5OQ1N,
-.inviteRowAvatar-3ETE3i .avatar-b5OQ1N {
+.container-YkUktl .avatar-1EWyVD .avatar-31d8He,
+.inviteRowAvatar-3ETE3i .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -2337,7 +2337,7 @@
     background: none;
 }
 
-.svg-2zuE5p > foreignObject {
+.svg-2ifYOU > foreignObject {
     mask: none;
 }
 
@@ -2345,7 +2345,7 @@
     border-radius: 12px;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #912;
 }
 
@@ -2412,7 +2412,7 @@
     margin-top: -2px !important;
 }
   
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     height: 450px;
 }
@@ -2453,7 +2453,7 @@
     border: 2px solid transparent;
     border-radius: 4px;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
@@ -2603,7 +2603,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
@@ -2700,17 +2700,17 @@
     border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
@@ -2719,7 +2719,7 @@
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -2938,7 +2938,7 @@ background-color: transparent;
     background-color: #912;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
 border-top-color: #912;
 }
 
@@ -2972,18 +2972,18 @@ border-top-color: #912;
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -2997,8 +2997,8 @@ border-top-color: #912;
     color: white;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3302,7 +3302,7 @@ border-top-color: #912;
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3587,12 +3587,12 @@ border-top-color: #912;
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -3860,8 +3860,8 @@ border-top-color: #912;
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3893,7 +3893,7 @@ border-top-color: #912;
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4207,6 +4207,48 @@ border-top-color: #912;
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
 }
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
+}
+
 
 /* Main Color */
 .main-color{color: #912;}
