--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4.3
+ * @version 4.4
  */
 
 /* Main Background */
@@ -82,11 +82,11 @@
     font-weight: bold;
 } 
 
-.cardPrimary-3qRT__, .cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
    border: none;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background-color: rgba(0,0,0,.2);
 }
 
@@ -96,19 +96,19 @@
     border-color: #2AB;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 19px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #2AB;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, .auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, .auto-2TJ1RH::-webkit-scrollbar-track {
     border-radius: 5px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
@@ -127,7 +127,7 @@
     background-color: #18E;
 }
 
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
     box-shadow: none;
 }
@@ -137,7 +137,7 @@
     max-height: 800px;
 }
 
-.root-g14mjS {
+.root-1CAIjD {
     border-radius: 9px;
 }
 
@@ -145,7 +145,7 @@
     background-color: rgba(0,0,0,.3) !important;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
     background-color: transparent;
     box-shadow: none;
 }
@@ -159,19 +159,19 @@
     font-weight: bold;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP):not(.side-2ur1Qk .item-3XjbnG[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl):not(.side-1lrxIh .item-2GWPIy[style*="color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]), .topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(17, 187, 204, .4);
 }
 
-.brand-3g5E0C.item-3XjbnG:hover, .themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover, .themed-qqoYp3.item-2GWPIy:hover {
     color: white;
 }
 
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .item-2GWPIy {
     border-radius: 8px;
 }
 
-.brand-3g5E0C.item-3XjbnG, .themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy, .themed-qqoYp3.item-2GWPIy {
     color: white;
 }
 
@@ -207,7 +207,7 @@
     font-size: 19px;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, .topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-image: -webkit-repeating-linear-gradient(112deg, #22a9bb 31%, #000000 36%);
     border: 2px solid #2AB;
 }
@@ -251,26 +251,26 @@
     border: none;
 }
 
-.footer-31IekZ a, .link-3PveBK a {
+.footer-1KGV6y a, .link-3PveBK a {
     color: #2AB;
     font-weight: bold;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
 }
 
-.tooltip-14MtrL {
+.tooltip-33Jwqe {
     border-radius: 8px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #2AB;
     color: white;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #2AB;
 }
 
@@ -278,11 +278,11 @@
     color: white;
 }
 
-.buttonContainer-28osRq, .separator-2wx7h6 {
+.buttonContainer-28osRq, .separator-2N511j {
     background-color: transparent;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 16px;
     color: white;
 }
@@ -327,11 +327,11 @@
     border: 2px solid #2AB;
 } 
 
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: #2AB;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     background-image: linear-gradient(
 0deg
 ,transparent,transparent 1px,#2AB 0,#2AB 2px,transparent 0);
@@ -416,7 +416,7 @@
     border: 3px solid #2AB;
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     border: none;
     background-color: transparent;
 }
@@ -580,7 +580,7 @@
     border-radius: 4px;
 }
 
-.cardPrimaryOutline-1ofwVz {
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
     border-color: #2AB;
 }
 
@@ -742,7 +742,7 @@
     mask: none;
 }
 
-.avatar-3mTjvZ .avatar-b5OQ1N {
+.avatar-3mTjvZ .avatar-31d8He {
     border-radius: 6px;
 }
 
@@ -1117,23 +1117,23 @@
     box-shadow: none;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: none;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
     border-radius: 6px;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #1BC;
     border: 2px solid white;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: #1BC;
 }
 
@@ -1396,18 +1396,18 @@
     color: white;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     border-color: transparent;
     background-color: transparent;
     border: none;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border-radius: 2px;
     background-color: #2AB;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 10px;
 }
 
@@ -1416,7 +1416,7 @@
     background: rgba(0,0,0,.4);
 }
 
-.pageButton-1GMGeJ {
+.pageButton-uta6J3 {
     color: white;
 }
 
@@ -1424,11 +1424,11 @@
     border-radius: 5px;
 }
 
-.theme-dark .activeButton-LRWFC_, .theme-dark .activeButton-LRWFC_:hover, .theme-light .activeButton-LRWFC_, .theme-light .activeButton-LRWFC_:hover {
+.theme-dark .activeButton-2K2Fwx, .theme-dark .activeButton-2K2Fwx:hover, .theme-light .activeButton-2K2Fwx, .theme-light .activeButton-2K2Fwx:hover {
     background-color: #2AB;
 }
 
-.pageButton-1GMGeJ:hover {
+.pageButton-uta6J3:hover {
     color: white;
     background-color: #1BC;
 }
@@ -1588,7 +1588,7 @@
     background-color: rgba(0,0,0,.4);
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, .colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, .colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: white;
 }
 
@@ -1664,15 +1664,15 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.colorDefault-CDqZdO .check-3HZJs4 {
+.colorDefault-2_rLdz .check-3-73a4 {
     color: #1bc;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .checkbox-hADx5o, .colorDefault-CDqZdO.focused-3qFvc8 .radioSelection-1UHp0b, .colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE {
+.colorDefault-2_rLdz.focused-3LIdPu .checkbox-397WsK, .colorDefault-2_rLdz.focused-3LIdPu .radioSelection-3PDNAQ, .colorDefault-2_rLdz.focused-3LIdPu .subtext-1mqKVB {
     color: #2AB;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: white;
 }
 
@@ -1690,16 +1690,16 @@
     mask: none;
 }
 
-.avatarSizeOverride-sfatEO .avatar-b5OQ1N,
-.avatar-1HDIsL .avatar-b5OQ1N,
-.friend-8ZraY7 .avatar-135A-D .avatar-b5OQ1N,
-.avatar-2Vndt_ .avatar-b5OQ1N,
-.avatar-3QF_VA .avatar-b5OQ1N,
-.listAvatar-2bU5Uh .avatar-b5OQ1N,
-.container-YkUktl .avatar-1EWyVD .avatar-b5OQ1N, 
-.avatar-2MSPKk .avatar-b5OQ1N,
-.headerAvatar-GgCKcl .avatar-b5OQ1N,
-.inviteRowAvatar-3ETE3i .avatar-b5OQ1N {
+.avatarSizeOverride-sfatEO .avatar-31d8He,
+.avatar-1HDIsL .avatar-31d8He,
+.friend-8ZraY7 .avatar-135A-D .avatar-31d8He,
+.avatar-2Vndt_ .avatar-31d8He,
+.avatar-3QF_VA .avatar-31d8He,
+.listAvatar-2bU5Uh .avatar-31d8He,
+.container-YkUktl .avatar-1EWyVD .avatar-31d8He, 
+.avatar-2MSPKk .avatar-31d8He,
+.headerAvatar-GgCKcl .avatar-31d8He,
+.inviteRowAvatar-3ETE3i .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -1819,11 +1819,11 @@
     background-color: transparent;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, .top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, .top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #2AB;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: #1BC;
 }
 
@@ -1909,7 +1909,7 @@
     mask: none;
 }
 
-.avatar-6qzftW .avatar-b5OQ1N {
+.avatar-6qzftW .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -2186,7 +2186,7 @@
     mask: none;
 }
 
-.applicationStreamingAvatar-3RXs7A .avatar-b5OQ1N {
+.applicationStreamingAvatar-3RXs7A .avatar-31d8He {
     border-radius: 4px;
 }
 
@@ -2194,7 +2194,7 @@
     mask: none;
 }
 
-.partyMember-YLjOa7 .avatar-b5OQ1N {
+.partyMember-YLjOa7 .avatar-31d8He {
     border-radius: 5px;
 }
 
@@ -2249,7 +2249,7 @@
     background-color: #188b01 !important;
 }
 
-.svg-2zuE5p > foreignObject {
+.svg-2ifYOU > foreignObject {
     mask: none;
 }
 
@@ -2257,7 +2257,7 @@
     border-radius: 12px;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #2AB;
 }
 
@@ -2320,7 +2320,7 @@
     margin-top: -2px !important;
 }
   
-.theme-dark .root-g14mjS.uploadModal-2ie9O_ {
+.theme-dark .root-1CAIjD.uploadModal-2ie9O_ {
     width: 650px;
     height: 450px;
 }
@@ -2367,7 +2367,7 @@
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
     border: 2px solid #1BC;
 }
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 .theme-dark .container-2qVG6q.isOpen-2OXbFs {
@@ -2514,7 +2514,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-3fnj3y {
+.root-1CAIjD.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-radial-gradient(50% 50%, ellipse cover, #22a9bb 0%, #000000 95%);
 }
@@ -2611,17 +2611,17 @@
     border: none;
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: black;
     border: none;
 }
 
-.item-1BCeuB,
+.item-1Mjtru,
 .emoji-20i0XK {
     color: white;
 }
 
-.item-1BCeuB {
+.item-1Mjtru {
     border: 1px solid transparent;
 }
 
@@ -2630,7 +2630,7 @@
 }
 
 .focused-qp-W9B, 
-.item-1BCeuB:hover:not(.disabled-Mmpvl7) {
+.item-1Mjtru:hover:not(.disabled-Mmpvl7) {
     background-color: rgba(255, 255, 255, .4);
     border: 1px solid white;
     color: white;
@@ -2848,7 +2848,7 @@
     background-color: #2AB;
 }
   
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
   border-top-color: #2AB;
 }
 
@@ -2882,24 +2882,24 @@
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3209,7 +3209,7 @@
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3478,12 +3478,12 @@
     background-color: rgba(0, 0, 0, .09);
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #EAD2C6;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -3751,8 +3751,8 @@
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3784,7 +3784,7 @@
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -4107,6 +4107,51 @@
     background-color: rgba(255, 255, 255, .15);
 }
 
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.card-2guEcY a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
+}
 /* Main Color */
 .main-color{color: #2AB;}
 
