--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 2
+ * @version 2.1
 */
 
 /* Rem Main Picture */
@@ -79,13 +79,13 @@
     color: white;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ {
+.lookLink-13iF2K.colorLink-34zig_ {
     color: #6cb4fe;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
     0 2px 0 black, 0 2px 0 black, 0 2px 0 black;
 }
 
-.lookLink-15mFoz.colorLink-1Md3RZ:hover .contents-3ca1mk {
+.lookLink-13iF2K.colorLink-34zig_:hover .contents-3NembX {
     --button--underline-color: transparent;
 }
 
@@ -114,16 +114,16 @@
     background-color: rgba(0,0,0,.4) !important;
 }
 
-.theme-dark .root-g14mjS,
-.theme-dark .footerSeparator-VzAYwb {
+.theme-dark .root-1CAIjD,
+.theme-dark .footerSeparator-3U8YsT {
     box-shadow: none;
 }
 
-.root-g14mjS {
+.root-1CAIjD {
     background-color: #1c1c1c;
 }
 
-.footer-31IekZ {
+.footer-1KGV6y {
     background-color: transparent;
 }
 
@@ -148,70 +148,70 @@
     border-color: #6cb4fe;
 }
 
-.auto-2K3UW5::-webkit-scrollbar {
+.auto-2TJ1RH::-webkit-scrollbar {
     width: 8px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb {
+.auto-2TJ1RH::-webkit-scrollbar-thumb {
     background-color: #6cb4fe;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-thumb, 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-thumb, 
+.auto-2TJ1RH::-webkit-scrollbar-track {
     border: none;
     border-radius: 3px;
 }
 
-.auto-2K3UW5::-webkit-scrollbar-track {
+.auto-2TJ1RH::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
-.header-2Kx1US {
+.header-2F5_LB {
     font-size: 13px;
     color: white;
 }
 
-.thin-31rlnD::-webkit-scrollbar {
+.thin-RnSY0a::-webkit-scrollbar {
     width: 2px;
 }
 
-.thin-31rlnD::-webkit-scrollbar-thumb {
+.thin-RnSY0a::-webkit-scrollbar-thumb {
     border: none;
     border-radius: 2px;
     background-color: #6cb4fe;
 }
 
-.thin-31rlnD::-webkit-scrollbar-track {
+.thin-RnSY0a::-webkit-scrollbar-track {
     background-color: transparent;
     border: none;
 }
 
-.side-2ur1Qk .themed-2-lozF.selected-g-kMVV.item-3XjbnG, 
-.topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.item-3XjbnG {
+.side-1lrxIh .themed-qqoYp3.selected-1sf9UK.item-2GWPIy, 
+.topPill-3DJJNV .themed-qqoYp3.selected-1sf9UK.item-2GWPIy {
     background-color: #6cb4fe !important;
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
     color: white !important;
 }
 
-.side-2ur1Qk .item-3XjbnG {
+.side-1lrxIh .item-2GWPIy {
     border-radius: 4px;
 }
 
-.brand-3g5E0C.item-3XjbnG, 
-.themed-2-lozF.item-3XjbnG {
+.brand-2EKq3J.item-2GWPIy, 
+.themed-qqoYp3.item-2GWPIy {
     color: white;
 }
 
-.side-2ur1Qk .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP), 
-.topPill-3DJJNV .themed-2-lozF.item-3XjbnG:hover:not(.disabled-1nofHP) {
+.side-1lrxIh .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl), 
+.topPill-3DJJNV .themed-qqoYp3.item-2GWPIy:hover:not(.disabled-2G98Nl) {
     background-color: rgba(0,0,0,.1);
 }
 
-.brand-3g5E0C.item-3XjbnG:hover, 
-.themed-2-lozF.item-3XjbnG:hover {
+.brand-2EKq3J.item-2GWPIy:hover, 
+.themed-qqoYp3.item-2GWPIy:hover {
     color: rgba(255, 255, 255, .6);
 }
 
@@ -221,12 +221,12 @@
     border-bottom: none;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:active, 
-.top-K_jibn .brand-3g5E0C.selected-g-kMVV.item-3XjbnG {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:active, 
+.top-K_jibn .brand-2EKq3J.selected-1sf9UK.item-2GWPIy {
     border-bottom-color: #6cb4fe;
 }
 
-.top-K_jibn .brand-3g5E0C.item-3XjbnG:hover {
+.top-K_jibn .brand-2EKq3J.item-2GWPIy:hover {
     border-bottom-color: rgba(255, 255, 255, .6);
 }
 
@@ -311,7 +311,7 @@
 }
 
 
-.separator-2wx7h6 {
+.separator-2N511j {
     background-color: transparent;
 }
 
@@ -415,7 +415,7 @@
     color: white;
 }
 
-.tooltip-14MtrL {
+.tooltip-33Jwqe {
     border-radius: 15px;
     font-size: 14px;
 }
@@ -424,15 +424,15 @@
     font-size: 14px;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS {
+.theme-dark .tooltipPrimary-2466a2 {
     background-color: #6cb4fe;
 }
 
-.theme-dark .tooltipPrimary-3qLMbS .tooltipPointer-3L49xb {
+.theme-dark .tooltipPrimary-2466a2 .tooltipPointer-sMBQqe {
     border-top-color: #6cb4fe;
 }
 
-.theme-dark .tooltip-14MtrL {
+.theme-dark .tooltip-33Jwqe {
     box-shadow: none;
     color: white;
 }
@@ -578,16 +578,16 @@
     border-width: 3px;
 }
 
-.cardPrimary-3qRT__ {
+.cardPrimary-pAe8Ed {
     background: rgba(0, 0, 0, .3);
 }
 
-.cardPrimary-3qRT__, 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed, 
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: rgba(0, 0, 0, .2);
 }
 
-.card-16VQ8C a {
+.card-2guEcY a {
     color: #6cb4fe;
     text-shadow: 0 2px 0 black, 0 2px 0 black, 
     0 2px 0 black, 0 2px 0 black, 0 2px 0 black;
@@ -738,7 +738,7 @@
     border-color: black;
 }
 
-.wanderingCubesItem-3Us-UG {
+.wanderingCubes-2A046F .item-2VgEex {
     background-color: #6cb4fe;
 }
 
@@ -768,7 +768,7 @@
     background-color: rgba(0,0,0,.3);
 }
 
-.cameraWrapper-3a7Ngv {
+.cameraWrapper-nG8dpo {
     background-color: rgba(0, 0, 0, .2);
     border: none;
 }
@@ -1080,7 +1080,7 @@
     border-radius: 4px;
 }
 
-.menu-1QACrS {
+.menu-2TXYjN {
     box-shadow: none;
     background: #1c1c1c;
     border: 1px solid #6cb4fe;
@@ -1092,25 +1092,25 @@
     font-size: 13px;
 }
 
-.colorDefault-CDqZdO {
+.colorDefault-2_rLdz {
     color: white;
     border-color: transparent;
 }
 
-.colorDefault-CDqZdO .checkbox-hADx5o, 
-.colorDefault-CDqZdO .radioSelection-1UHp0b {
+.colorDefault-2_rLdz .checkbox-397WsK, 
+.colorDefault-2_rLdz .radioSelection-3PDNAQ {
     color: #6cb4fe;
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 {
+.colorDefault-2_rLdz.focused-3LIdPu {
     background-color: rgba(255, 255, 255, .1);
 }
 
-.colorDefault-CDqZdO.focused-3qFvc8 .check-3HZJs4 {
+.colorDefault-2_rLdz.focused-3LIdPu .check-3-73a4 {
     color: #6cb4fe;
 }
 
-.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_) {
+.colorDefault-2_rLdz:active:not(.hideInteraction-1vQrZJ) {
     background-color: #6cb4fe;
     color: white;
 }
@@ -1419,7 +1419,7 @@
     border: 1px solid #6cb4fe;
 }
 
-.separator-1So4YB {
+.separator-12G2Op {
     border-bottom: none;
 }
 
@@ -1601,8 +1601,8 @@
     border-bottom: none;
 }
 
-.top-K_jibn .selected-g-kMVV.themed-2-lozF.item-3XjbnG, 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:active {
+.top-K_jibn .selected-1sf9UK.themed-qqoYp3.item-2GWPIy, 
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:active {
     border-bottom-color: #6cb4fe;
 }
 
@@ -1614,7 +1614,7 @@
     border-top: none;
 }
 
-.top-K_jibn .themed-2-lozF.item-3XjbnG:hover {
+.top-K_jibn .themed-qqoYp3.item-2GWPIy:hover {
     border-bottom-color: silver;
 }
 
@@ -2497,7 +2497,7 @@
     border-color: black;
 }
 
-.cardPrimaryEditable-2mz_3i {
+.cardPrimary-pAe8Ed.editable-2xfXMr {
     background: rgba(0, 0, 0, .2);
 }
 
@@ -2657,7 +2657,7 @@
     background-color: #6cb4fe;
 }
 
-.theme-dark .tooltipBrand-20XsMA .tooltipPointer-3L49xb {
+.theme-dark .tooltipBrand-20XsMA .tooltipPointer-sMBQqe {
     border-top-color: #6cb4fe;
 }
 
@@ -2899,7 +2899,7 @@
     color: white !important;
 }
 
-.theme-dark .separator-2lLxgC {
+.theme-dark .separator-3C440w {
     box-shadow: none;
 }
 
@@ -2975,18 +2975,18 @@
     background-color: rgba(255, 255, 255, .12);
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] + rect,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] + rect {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] + rect,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] + rect {
   fill: black;
 }
 
-#app-mount .avatarWrapper-3y0KZ1 .wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
-#app-mount .avatar-1YsFQ1.wrapper-1VLyxH foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
+#app-mount .avatarWrapper-3y0KZ1 .wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj,
+#app-mount .avatar-1YsFQ1.wrapper-3Un6-K foreignObject[mask*=mobile] ~ .pointerEvents-9SZWKj {
   mask: url("#svg-mask-status-online-mobile");
   fill: #3BA53B !important;
 }
 
-.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-1VLyxH circle {
+.avatarWrapper-3y0KZ1 circle, .avatar-1YsFQ1.wrapper-3Un6-K circle {
     fill: black;
     opacity: 1 !important;
 }
@@ -2995,8 +2995,8 @@
     background-color: rgba(0, 0, 0, .6);
 }
 
-.selected-g-kMVV.item-3XjbnG, 
-.selected-g-kMVV.item-3XjbnG:hover {
+.selected-1sf9UK.item-2GWPIy, 
+.selected-1sf9UK.item-2GWPIy:hover {
   color: white!important;
 }
 
@@ -3246,7 +3246,7 @@
     box-shadow: none;
 }
 
-.theme-dark .popoutList-10IFAa {
+.theme-dark .popoutList-2oR8Im {
     background: #141414;
 }
 
@@ -3769,8 +3769,8 @@
 .ruleIconContainer-dXW56-,
 .stepCountIcon-1A2Rxd,
 .channelRowLabel-2yYGtY,
-.collapseable-DdnHFl.toggled-3yp8ip:active,
-.collapseable-DdnHFl:active {
+.collapseable-1FiLab.toggled-SfZPpc:active,
+.collapseable-1FiLab:active {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3802,7 +3802,7 @@
 }
 
 .keywordListContainer-9ux8nU,
-.collapseable-DdnHFl {
+.collapseable-1FiLab {
     background-color: rgba(0, 0, 0, .3);
 }
 
@@ -3927,7 +3927,7 @@
     background-color: rgba(225, 225, 225, .1);
 }
 
-.container-2O1UgZ {
+.container-2kTWmC {
     background-color: #21252B;
     border: none;
 }
@@ -3951,7 +3951,7 @@
     background: none;
 }
 
-.chat-25x62K:before {
+.chat-3t9F_n:before {
     box-shadow: none;
 }
 
@@ -4134,4 +4134,53 @@
 
 .row-7jGzPR:hover {
     background-color: rgba(255, 255, 255, .15);
+}
+
+.iconWrapper-3plkqh {
+    background-color: black;
+}
+
+.accountBtnInner-1DCgBm {
+    background-color: rgba(0, 0, 0, .3) !important;
+}
+
+.wrapper-wOVKdL,
+.paymentNote-1JTD1J {
+  background-color: transparent;
+}
+
+.cardPrimary-pAe8Ed.outline-3kFzf8 {
+    border-color: black;
+}
+
+.card-2guEcY:not(.outline-3kFzf8) {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.audienceContainerCollapsed-2OXkcm,
+.moreContainer-R0kRGB {
+    background-color: rgba(0, 0, 0, .4);
+    border: 4px solid transparent;
+}
+
+.emptyIcon-IW8ndV circle {
+  fill: rgba(0, 0, 0, .4);
+}
+
+.emptyIcon-IW8ndV path {
+  stroke: white;
+  fill: white;
+}
+
+.defaultColor-1EVLSt a {
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.tagsContainer-3rSFH5 .tagsButton-2EKn70 .tagsButtonInner-QgpYNg {
+    color: gold;
+}
+
+.resizeHandle-PBRzPC {
+    background: none;
 }
